--- a/yejo/src/main/resources/templates/admin/utilities-border.html
+++ b/yejo/src/main/resources/templates/admin/utilities-border.html
@@ -83,10 +83,10 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item active" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="utilities-other.html">Other</a>
+                        <a class="collapse-item" href="utilities-color">Colors</a>
+                        <a class="collapse-item active" href="utilities-border">Borders</a>
+                        <a class="collapse-item" href="utilities-animation">Animations</a>
+                        <a class="collapse-item" href="utilities-other">Other</a>
                     </div>
                 </div>
             </li>
