--- a/yejo/src/main/resources/templates/main/location.html
+++ b/yejo/src/main/resources/templates/main/location.html
@@ -59,7 +59,7 @@
 
 	<!-- for mobile -->
 	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="YEJO INTERIOR"></a></div>
+		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="OWL DESIGN"></a></div>
 		<div class="m-lang"></div>
 		<nav class="nav-menu">
 		</nav>
@@ -70,44 +70,80 @@
 <div id="container">
 	<div id="contArea">
 		<div class="sub-title">
-			<h1>YEJO STORY</h1>
+			<h1>LOCATION</h1>
 		</div>
 		<div class="real-cont">
 			<!--// content -->
-				<div class="greeting wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
-					<div class="img"><img src="../images/sub/greeting.jpg" alt=""></div>
-					<div class="txt-wrap">
-						<div class="col">
-							<p class="tit">안녕하세요, 중앙정보처리학원 대표 신희문입니다.</p>
-							<p class="txt">사람들은 각자 자신을 둘러싼 공간 속에서 삶을 영위하고 가치를 실현합니다. <br>공간은 사람에 의해 창조되고, 동시에 우리 역시 공간을 통해 정의됩니다.</p>
-							<p class="txt">저희 예조인테리어는 고객님에게 최고의 가치를 선사하기 위하여 <br>'남들과는 다른' 섬세함과 창의성을 내세운 서비스를 제공합니다.</p>
-							<p class="txt">오로지 고객님 한 분만을 위해, 주인공으로서 공간에 머무르실 수 있도록 <br>전문성을 갖춘 직원들이 상호 소통하며 노력하고 있습니다.</p>
-							<p class="txt">기본기에 혁신성을 더해 어디에서도 누리지 못한 라이프스타일을 선사해 드리겠습니다.</p>
-							<p class="txt">예조인테리어를 찾아 주신 분들께 진심으로 감사드립니다.</p>
-						</div>
-						<div class="col">
-							<h2 class="tit"><span class="highlight">트렌드는 소통으로부터</span></h2>
-							<p class="txt">예조인테리어는 이 시대의 트렌드를 고객님에게 적절히 접목시키기 위하여 소통에 중점을 두고 작업합니다.</p>
-						</div>
-						<div class="col">
-							<h2 class="tit"><span class="highlight">남들과는 다르다</span></h2>
-							<p class="txt">예조인테리어는 이 시대의 트렌드를 고객님에게 적절히 접목시키기 위하여 소통에 중점을 두고 작업합니다.</p>
-						</div>
-						<div class="col">
-							<h2 class="tit"><span class="highlight">안전이 최우선</span></h2>
-							<p class="txt">예조인테리어는 전문 시공팀과 10년 넘게 호흡을 맞춰 왔으며, 무엇보다도 안전을 중요시합니다. </p>
-						</div>
-						<div class="col">
-							<h2 class="tit"><span class="highlight">A to Z, 비스포크 서비스</span></h2>
-							<p class="txt">모든 프로젝트마다 풍부한 지식과 경험을 갖춘 디자이너 및 시공 팀장이 배정되어, <br>상담부터 A/S까지 오로지 고객님만을 위해 진행됩니다.</p>
-						</div>
+			<div class="wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
+				<h2 class="doc-tit"><span class="highlight">YOUTUBE</span></h2>
+				<div class="doc-cnt">
+					<div class="sns-list">
+						<ul>
+										
+									<li>
+													<a href="https://www.youtube.com/embed/EwiNuowHLio?mute=1&autoplay=0&showinfo=0&enablejsapi=1&origin=https://owldesign.co.kr" target="_blank">
+												<div class="thumb"><img src="https://img.youtube.com/vi/EwiNuowHLio/maxresdefault.jpg" alt="youtube3"></div></a>
+						
+					</li>
+									<li>
+													<a href="https://www.youtube.com/embed/nM8gTgYaOuQ?mute=1&autoplay=0&showinfo=0&enablejsapi=1&origin=https://owldesign.co.kr" target="_blank">
+												<div class="thumb"><img src="https://img.youtube.com/vi/nM8gTgYaOuQ/maxresdefault.jpg" alt="youtube2"></div></a>
+						
+					</li>
+									<li>
+													<a href="https://www.youtube.com/embed/kYnZv5Oy5Mc?mute=1&autoplay=0&showinfo=0&enablejsapi=1&origin=https://owldesign.co.kr" target="_blank">
+												<div class="thumb"><img src="https://img.youtube.com/vi/kYnZv5Oy5Mc/maxresdefault.jpg" alt="youtube1"></div></a>
+						
+					</li>
+				
+
+
+											<!-- <li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li> -->
+						</ul>
 					</div>
 				</div>
+				<h2 class="doc-tit"><span class="highlight">BLOG</span></h2>
+				<div class="doc-cnt">
+					<div class="sns-list">
+						<ul>
+										
+									<li>
+													<a href="https://blog.naver.com/owl_design/223413340512" target="_blank">
+												<div class="thumb"><img src="/uploaded/board/blog/7f193c42a4233426f740f43e8bb1443e0.jpg" alt=""></div></a>
+						
+					</li>
+									<li>
+													<a href="https://blog.naver.com/owl_design/223425823725" target="_blank">
+												<div class="thumb"><img src="/uploaded/board/blog/734502a7906cc23cc5055f23e38367c70.jpg" alt=""></div></a>
+						
+					</li>
+									<li>
+													<a href="https://blog.naver.com/owl_design/222678513413" target="_blank">
+												<div class="thumb"><img src="/uploaded/board/blog/92fe7b812f97eac93658cc6f9de489b70.jpg" alt=""></div></a>
+						
+					</li>
+				
+
+
+											<!-- <li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
+							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li> -->
+						</ul>
+					</div>
+				</div>
+			</div>
 			<!-- content //-->
 		</div>
 	</div>
 </div>
-
 
 	<!--// footer -->
    <div th:replace="~{main/footer :: footer}"></div>
