--- a/yejo/src/main/resources/templates/main/main.html
+++ b/yejo/src/main/resources/templates/main/main.html
@@ -48,31 +48,12 @@
 	</div>
 <div id="wrapper"> 
 	<!-- // header -->
-     <header id="header">
-		
-		<div class="contain">
-			<div class="sitelogo"><a href="/index.php">OWL DESIGN</a></div>	
-			<div id="gnb">
-				<h2 class="blind">주메뉴</h2>
-				<ul>
-					<li><a href="/company">OWL STORY</a></li>
-					<li><a href="/portfolio">PORTFOLIO</a></li>
-					<li><a href="/consulting">CONSULTANT </a></li>
-					<li><a href="/about">ABOUT </a></li>
-					<li><a href="/sns">SNS</a></li>
-				</ul>
-			</div>
-			<a href="#menu" class="btn-m-menu"><span>메뉴</span></a><!-- for mobile -->
-
-		</div>
-		
-		<div class="submenu-bg"></div>
-	</header>
+    <div th:replace="~{main/header :: header}"></div>
 	<!-- header //-->
 
 	<!-- for mobile -->
 	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/index.php"></a></div>
+		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="YEJO INTERIOR"></a></div>
 		<div class="m-lang"></div>
 		<nav class="nav-menu">
 		</nav>
@@ -80,7 +61,7 @@
 	</div>
 	<div class="mobile-overlay"></div>
     
-<h1 class="blind">아울디자인</h1>
+<h1 class="blind">예조인테리어</h1>
 <div id="container">
 	<div class="main-visual">
 		<div class="items">
@@ -139,17 +120,7 @@ function getCookie( name ){
 </script>
 
 	<!--// footer -->
-   <footer id="footer">
-		<div class="f-cnt">
-			<div class="contain">
-				<address>
-					<strong>OWL DESIGN</strong>
-					<span>대표 : 박치은</span> <span>주소 : 서울특별시 마포구 월드컵북로110, 2층 아울디자인</span> <span>TEL : 02-324-8004 </span> <span>E-MAIL : owl_design@naver.com</span>
-					<span class="copyright">Copyright(C)OWL DESIGN. All Rights Reserved. <a href="https://www.website.co.kr/" target="_blank" title="새창열림">Desigend by WebSite.co.kr</a></span>
-				</address>
-			</div>
-		</div>
-	</footer>
+   <div th:replace="~{/main/footer.html :: footer}"></div>
 	
 	
 	
