--- a/yejo/src/main/resources/templates/admin/banner.html
+++ b/yejo/src/main/resources/templates/admin/banner.html
@@ -12,7 +12,7 @@
     <title>관리자 페이지 - 배너 관리</title>
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
@@ -39,7 +39,14 @@
 
             <!-- Main Content -->
             <div id="content">
-
+                <!-- Topbar -->
+                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+                    <!-- Sidebar Toggle (Topbar) -->
+                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                        <i class="fa fa-bars"></i>
+                    </button>
+                    <h1 class="h3 mb-0 text-gray-800">배너 관리</h1>
+                </nav>
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
@@ -49,7 +56,7 @@
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">메인페이지 배너 관리</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">메인페이지 사진 관리</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
