main, review 페이지

--- a/yejo/src/main/resources/templates/main/review.html
+++ b/yejo/src/main/resources/templates/main/review.html
@@ -1,157 +1,164 @@
 
 <!DOCTYPE html>
- <html lang="ko">
+<html lang="ko">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes" name="viewport">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
-	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="아울디자인">
-	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
-	<meta name="keywords" content="아울디자인">
-    	<title>YEJO 인테리어</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta
+	content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes"
+	name="viewport">
+<meta name="format-detection" content="telephone=no">
+<meta name="naver-site-verification"
+	content="44191bf280942a37902e9d4e7aa341c5ddccb7db" />
+<meta name="google-site-verification"
+	content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />
+<meta name="subject" content="아울디자인">
+<meta name="description"
+	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
+<meta name="keywords" content="아울디자인">
+<title>YEJO 인테리어</title>
 
-	<meta property="og:url"	content="https://owldesign.co.kr">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="아울디자인">
-	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
-	<meta property="og:image" content="https://owldesign.co.kr/images/sns_link.png">
-	<link rel="canonical" href="https://owldesign.co.kr">
+<meta property="og:url" content="https://owldesign.co.kr">
+<meta property="og:type" content="website">
+<meta property="og:title" content="아울디자인">
+<meta property="og:description"
+	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 아울디자인.">
+<meta property="og:image"
+	content="https://owldesign.co.kr/images/sns_link.png">
+<link rel="canonical" href="https://owldesign.co.kr">
 
-	<link rel="stylesheet" type="text/css" href="/common/froala/css/froala_style.min.css" />
+<link rel="stylesheet" type="text/css"
+	href="/common/froala/css/froala_style.min.css" />
 
-	<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="/css/pretendard.css">
-	<link rel="stylesheet" type="text/css" href="/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="/css/venobox.css">
-	<link rel="stylesheet" type="text/css" href="/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/css/doc.css">
-	<link rel="stylesheet" type="text/css" href="/css/board.css">
-	<link rel="stylesheet" type="text/css" href="/css/layout.css">
-	<link rel="stylesheet" type="text/css" href="/css/slick.css">
-	<link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
-	<link rel="stylesheet" type="text/css" href="/css/responsive.css">
+<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
+<link rel="stylesheet" type="text/css" href="/css/pretendard.css">
+<link rel="stylesheet" type="text/css" href="/css/animate.css">
+<link rel="stylesheet" type="text/css" href="/css/venobox.css">
+<link rel="stylesheet" type="text/css" href="/css/reset.css">
+<link rel="stylesheet" type="text/css" href="/css/doc.css">
+<link rel="stylesheet" type="text/css" href="/css/board.css">
+<link rel="stylesheet" type="text/css" href="/css/layout.css">
+<link rel="stylesheet" type="text/css" href="/css/slick.css">
+<link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
+<link rel="stylesheet" type="text/css" href="/css/responsive.css">
+<link rel="stylesheet" type="text/css" href="/css/review.css">
 
-	<script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="/js/jquery.gnb.js"></script>
-	<script type="text/javascript" src="/js/jquery.easing.1.3.js"></script>	
-	<script type="text/javascript" src="/js/slick.js"></script> 	
-	<script type="text/javascript" src="/js/swiper.min.js"></script>
-	<script type="text/javascript" src="/js/venobox.js"></script>
-	<script type="text/javascript" src="/js/jquery.ui.js"></script>
-	<script type="text/javascript" src="/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-	<script type="text/javascript" src="/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-	<link rel="stylesheet" type="text/css" href="/fancybox/source/jquery.fancybox.css?v=2.1.5" media="screen">
-	<script type="text/javascript" src="/js/wow.min.js"></script>
-	<script type="text/javascript" src="/js/script.js"></script>
+<script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="/js/jquery.gnb.js"></script>
+<script type="text/javascript" src="/js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="/js/slick.js"></script>
+<script type="text/javascript" src="/js/swiper.min.js"></script>
+<script type="text/javascript" src="/js/venobox.js"></script>
+<script type="text/javascript" src="/js/jquery.ui.js"></script>
+<script type="text/javascript"
+	src="/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+<script type="text/javascript"
+	src="/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+<link rel="stylesheet" type="text/css"
+	href="/fancybox/source/jquery.fancybox.css?v=2.1.5" media="screen">
+<script type="text/javascript" src="/js/wow.min.js"></script>
+<script type="text/javascript" src="/js/script.js"></script>
 </head>
 
-<body id="sub" style="background-image:url('../images/common/sub-bg.gif');">
-<div id="skipToContent">
-				<a href="#contArea">본문 바로가기</a>
-				<a href="#gnb">주메뉴 바로가기</a>
+<body id="sub"
+	style="background-image: url('../images/common/sub-bg.gif');">
+	<div id="skipToContent">
+		<a href="#contArea">본문 바로가기</a> <a href="#gnb">주메뉴 바로가기</a>
 	</div>
-<div id="wrapper"> 
-	<!-- // header -->
-    <div th:replace="~{main/header :: header}"></div>
-	<!-- header //-->
+	<div id="wrapper">
+		<!-- // header -->
+		<div th:replace="~{main/header :: header}"></div>
+		<!-- header //-->
 
-	<!-- for mobile -->
-	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/index.php"><img src="/images/common/logo2.png" alt="OWL DESIGN"></a></div>
-		<div class="m-lang"></div>
-		<nav class="nav-menu">
-		</nav>
-		<a href="javascript:void(0);" class="close">Close</a>
-	</div>
-	<div class="mobile-overlay"></div>
-    
-<div id="container">
-	<div id="contArea">
-		<div class="sub-title">
-			<h1>REVIEW</h1>
+		<!-- for mobile -->
+		<div id="menu" class="mobile-navigation">
+			<div class="home">
+				<a href="/index.php"><img src="/images/common/logo2.png"
+					alt="OWL DESIGN"></a>
+			</div>
+			<div class="m-lang"></div>
+			<nav class="nav-menu"></nav>
+			<a href="javascript:void(0);" class="close">Close</a>
 		</div>
-		<div class="real-cont">
-			<!--// content -->
-			<div class="wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
-				<h2 class="doc-tit"><span class="highlight">YOUTUBE</span></h2>
-				<div class="doc-cnt">
-					<div class="sns-list">
-						<ul>
-										
-									<li>
-													<a href="https://www.youtube.com/embed/EwiNuowHLio?mute=1&autoplay=0&showinfo=0&enablejsapi=1&origin=https://owldesign.co.kr" target="_blank">
-												<div class="thumb"><img src="https://img.youtube.com/vi/EwiNuowHLio/maxresdefault.jpg" alt="youtube3"></div></a>
-						
-					</li>
-									<li>
-													<a href="https://www.youtube.com/embed/nM8gTgYaOuQ?mute=1&autoplay=0&showinfo=0&enablejsapi=1&origin=https://owldesign.co.kr" target="_blank">
-												<div class="thumb"><img src="https://img.youtube.com/vi/nM8gTgYaOuQ/maxresdefault.jpg" alt="youtube2"></div></a>
-						
-					</li>
-									<li>
-													<a href="https://www.youtube.com/embed/kYnZv5Oy5Mc?mute=1&autoplay=0&showinfo=0&enablejsapi=1&origin=https://owldesign.co.kr" target="_blank">
-												<div class="thumb"><img src="https://img.youtube.com/vi/kYnZv5Oy5Mc/maxresdefault.jpg" alt="youtube1"></div></a>
-						
-					</li>
-				
+		<div class="mobile-overlay"></div>
 
-
-											<!-- <li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li> -->
-						</ul>
-					</div>
+		<div id="container">
+			<div id="contArea">
+				<div class="sub-title">
+					<h1>REVIEW</h1>
 				</div>
-				<h2 class="doc-tit"><span class="highlight">BLOG</span></h2>
-				<div class="doc-cnt">
-					<div class="sns-list">
-						<ul>
-										
-									<li>
-													<a href="https://blog.naver.com/owl_design/223413340512" target="_blank">
-												<div class="thumb"><img src="/uploaded/board/blog/7f193c42a4233426f740f43e8bb1443e0.jpg" alt=""></div></a>
-						
-					</li>
-									<li>
-													<a href="https://blog.naver.com/owl_design/223425823725" target="_blank">
-												<div class="thumb"><img src="/uploaded/board/blog/734502a7906cc23cc5055f23e38367c70.jpg" alt=""></div></a>
-						
-					</li>
-									<li>
-													<a href="https://blog.naver.com/owl_design/222678513413" target="_blank">
-												<div class="thumb"><img src="/uploaded/board/blog/92fe7b812f97eac93658cc6f9de489b70.jpg" alt=""></div></a>
-						
-					</li>
-				
-
-
-											<!-- <li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li>
-							<li><a href="#"><div class="thumb"><img src="/images/bbs/noimg.gif" alt=""></div></a></li> -->
-						</ul>
+				<div class="real-cont">
+					<!--// content -->
+					<div class="review">
+						<a href="https://blog.naver.com/jiyukimm/223154111804"
+							class="link-wrapper" target="_blank">
+							<div class="content">
+								<!-- 이부분이 제목 -->
+								<span class="title">W. 의정부 예조인테리어 시공후기</span>
+								<!-- 이부분이 본문내용 -->
+								<p>전체시공이 아니더라도 부분시공만으로 드라마틱한 효과를 보실 수 있으니 리모델링, 인테리어를 희망하시는
+									분들 의정부 예조인테리어 정말 추천드려요~~ 신혼집 인테리어 랜선집들이 마칩니다 '-' [출처] W. 의정부
+									예조인테리어 시공후기|작성자 지창부수</p>
+								<div class="hashtags">
+									<span class="hashtag">64평</span> <span class="hashtag">대리석</span>
+								</div>
+							</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv1.jpg"
+							class="image">
+						</a>
 					</div>
+					<div class="review">
+						<a href="https://blog.naver.com/nosugar-111/223331790554"
+							class="link-wrapper" target="_blank">
+							<div class="content">
+								<!-- 이부분이 제목 -->
+								<span class="title">의정부 인테리어, 안전한 선택 예조인테리어</span>
+								<!-- 이부분이 본문내용 -->
+								<p>
+									다양한 인테리어 업체 중에서 선택을 할 때, 신뢰성, 소통, 친절함 등을 고려해보면 예조인테리어가 안전하고 확실한
+									선택일 것입니다. 맡긴 일에 대한 걱정 없이, 안정적이고 품질 높은 인테리어 서비스를 경험하고 싶다면,
+									예조인테리어를 고려해 보세요. <br>[출처] 의정부 인테리어, 안전한 선택 예조인테리어|작성자
+									cafe_button
+								</p>
+								<div class="hashtags">
+									<span class="hashtag">128평</span> <span class="hashtag">우드</span>
+								</div>
+							</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv2.jpg"
+							class="image">
+						</a>
+					</div>
+					<div class="review">
+						<a href="https://blog.naver.com/ah__jin/223450205242"
+							class="link-wrapper" target="_blank">
+							<div class="content">
+								<!-- 이부분이 제목 -->
+								<span class="title">신혼집 인테리어 (예조인테리어)</span>
+								<!-- 이부분이 본문내용 -->
+								<p>깔끔하게 저희가 원했던 화이트 & 그레이 느낌으로 진행해 주시고 ​ 아트월까지 포인트로 너무
+									만족스러웠어요 ​ 이사 날에도 직접 오셔서 문제없는지 한 번 더 체크해 주시고 ​ 이사 이후에도 문의사항에 대해
+
+									친절하게 응대해 주셔서 너무 감사했습니다😊 ​ 의정부 인테리어 업체 예조인테리어 추천해요!! [출처] 5.
+									신혼집 인테리어 및 이사 (예조인테리어)|작성자 Ah jin</p>
+								<div class="hashtags">
+									<span class="hashtag">32평</span><span class="hashtag">신혼집</span><span
+										class="hashtag">화이트&그레이</span>
+								</div>
+							</div> <!-- 이부분이 대표이미지 --> <img src="/images/main/mv3.jpg"
+							class="image">
+						</a>
+					</div>
+					<!-- content //-->
+					<a href="#" class="load-more-button">후기 더보기</a>
 				</div>
 			</div>
-			<!-- content //-->
 		</div>
-	</div>
-</div>
 
-	<!--// footer -->
-   <div th:replace="~{main/footer :: footer}"></div>
-	
-	
-	
-    <!-- footer //-->
-</div>
+		<!--// footer -->
+		<div th:replace="~{main/footer :: footer}"></div>
+
+
+
+		<!-- footer //-->
+	</div>
 
 
 </body>
