--- a/yejo/src/main/resources/static/css/layout.css
+++ b/yejo/src/main/resources/static/css/layout.css
@@ -125,7 +125,7 @@ html.menu-opened .mobile-overlay {display:block;}
 .main-visual .slick-prev { margin-right:30px;}
 .main-visual .slick-next {}
 
-.main-btn {position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);}
+.main-btn {position:absolute; left:50%; top:95%; transform:translate(-50%,-50%);}
 .main-btn a {display:inline-block; padding:14px 40px; font-size:var(--font-18px); font-weight:500; line-height:1.2em; letter-spacing:-0.03em; color:#fff; border:2px solid #fff; border-radius:100vh;}
 .main-btn a:hover {background:#fff; color:#2b211a;}
 
@@ -153,3 +153,33 @@ html.menu-opened .mobile-overlay {display:block;}
 
 .scroll-top {position:absolute; right:30px; top:50%; margin-top:-25px; transform:translateY(-20px); opacity:0; transition:0.2s all ease; z-index:99;}
 .scroll-top.active {transform:translateY(0); opacity:1;}
+
+.arrow {
+	background-color: rgba(0, 0, 0, 0.5); /* 반투명 검정 배경 */
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 50px;
+    color: white;
+    padding: 10px;
+    opacity: 0.2; /* 기본적으로 투명도 낮춤 */
+    transition: opacity 0.3s ease, border 0.3s ease; /* 부드러운 전환 효과 */
+    cursor: pointer;
+    z-index: 1000;
+    border: 2px solid transparent; /* 기본적으로 투명한 테두리 */
+    border-radius: 5px; /* 테두리 모서리 둥글게 */
+    user-select: none; /* 텍스트 선택 비활성화 */
+}
+
+.arrow.left {
+    left: 10px;
+}
+
+.arrow.right {
+    right: 10px;
+}
+
+.arrow:hover {
+    opacity: 1; /* 마우스 오버 시 투명도 1로 변경 */
+    border: 2px solid black; /* 마우스 오버 시 검정 테두리 추가 */
+}
