하현수 메인페이지 퍼블리싱 완료

--- a/yejo/src/main/resources/templates/admin/about.html
+++ b/yejo/src/main/resources/templates/admin/about.html
@@ -64,7 +64,7 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -74,7 +74,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <div th:replace="~{admin/sidebar :: sidebarFragment}"></div>
+        <div th:replace="~{/admin/sidebar :: sidebarFragment}"></div>
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
