--- a/yejo/src/main/resources/templates/main/consultant.html
+++ b/yejo/src/main/resources/templates/main/consultant.html
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/slick.css">
 	<link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/responsive.css">
+	<link rel="stylesheet" type="text/css" href="/css/consultant.css">
 
 	<script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.gnb.js"></script>
@@ -247,7 +248,7 @@ function inputNum(obj){
 				<div class="txt-box agree-box">
 					<div class="terms-wrap">
 	<div class="sec">
-		아울디자인은(는) (이하 '회사'는) 고객님의 개인정보를 중요시하며, "정보통신망 이용촉진 및 정보보호"에 관한 법률을 준수하고 있습니다. <br>
+		예조인테리어(는) (이하 '회사'는) 고객님의 개인정보를 중요시하며, "정보통신망 이용촉진 및 정보보호"에 관한 법률을 준수하고 있습니다. <br>
 		회사는 개인정보처리방침을 통하여 고객님께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.<br><br>
 		회사는 개인정보처리방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.<br>
 		- 본 방침은 : 2024년 04월 29일부터 시행됩니다. <br><br>
@@ -317,7 +318,7 @@ function inputNum(obj){
 	<div class="sec">
 		<h3>8. 개인정보에 관한 민원서비스</h3>
 		<p>회사는 고객의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 아래와 같이 관련 부서 및 개인정보 보호책임자를 지정하고 있습니다.</p>
-		<p>이 름 : 김슬기 실장 <Br>전 화 : 02-324-8004 <br>팩 스 : 02-323-8468 <br>이메일 : owl_design@naver.com</p>
+		<p>이 름 :  <Br>전 화 :  <br>팩 스 :  <br>이메일 : </p>
 		<p>귀하께서는 회사의 서비스를 이용하시며 발생하는 모든 개인정보보호 관련 민원을 개인정보관리책임자 혹은 담당부서로 신고하실 수 있습니다. <br>회사는 이용자들의 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다. <br>기타 개인정보침해에 대한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하시기 바랍니다.</p>
 		<p>개인분쟁조정위원회 (www.1336.or.kr/1336) <br>정보보호마크인증위원회 (www.eprivacy.or.kr/02-580-0533~4) <br>대검찰청 인터넷범죄수사센터 (http://icic.sppo.go.kr/02-3480-3600) <br>경찰청 사이버테러대응센터 (www.ctrc.go.kr/02-392-0330)</p>
 	</div>
@@ -330,171 +331,159 @@ function inputNum(obj){
 		</div>
 
 		<div class="consult-form">
-			<h2 class="doc-tit"><span class="highlight">고객정보</span></h2>
-			<div class="group">
-				<div class="box">
-					<dl>
-						<dt><label for="user_name">성함</label></dt>
-						<dd><input type="text" name="subject" id="user_name" value="" placeholder="성함을 입력해 주세요." class="input" style="width:100%;" required></dd>
-					</dl>
-				</div>
-				<div class="box">
-					<dl>
-						<dt><label for="tel1">연락처</label></dt><!-- etc_1 -->
-						<dd>
-							<input type="tel" name="phone_1" id="tel1" class="input" style="width:80px;" value="" maxlength="4" required> - 
-							<input type="tel" name="phone_2" id="tel2" class="input" style="width:100px;" value="" maxlength="4" required> - 
-							<input type="tel" name="phone_3" id="tel3" class="input" style="width:100px;" value="" maxlength="4" required>
-						</dd>
-					</dl>
-				</div>
-				<div class="box">
-					<dl>
-						<dt><label for="email">이메일</label></dt>
-						<dd><input type="email" name="email" id="email" value="" placeholder="이메일을 입력해 주세요." class="input" style="width:100%;" required></dd>
-					</dl>
-				</div>							
-				<div class="box">
-					<dl>
-						<dt>유입경로</dt>
-						<dd>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_2" id="way_1" value="유튜브" checked><label for="way_1">유튜브</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_2" id="way_2" value="인스타그램"  ><label for="way_2">인스타그램</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_2" id="way_3" value="블로그"  ><label for="way_3">블로그</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_2" id="way_4" value="지인소개"  ><label for="way_4">지인소개</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_2" id="way_5" value="인터넷검색"  ><label for="way_5">인터넷검색</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_2" id="way_6" value="기타"  ><label for="way_6">기타</label></span>
-							</span>
-						</dd>
-					</dl>
-				</div>
-				<div class="box">
-					<dl>
-						<dt><label for="pwd">비밀번호</label></dt>
-						<dd><input type="password" name="pass" id="pwd" placeholder="비밀번호를 입력해 주세요. 답변 확인 시에 필요합니다." class="input" style="width:100%;" required></dd>
-					</dl>
-				</div>
+		    <h2 class="form-title"><span class="highlight">고객 정보</span></h2>
+		    <div class="form-group">
+		        <div class="form-box">
+		            <dl>
+		                <dt><label for="customer_name">성함</label></dt>
+		                <dd><input type="text" name="customer_name" id="customer_name" placeholder="성함을 입력해 주세요." class="form-input" required></dd>
+		            </dl>
+		        </div>
+		     <div class="form-box">
+			    <dl>
+			        <dt><label for="contact1">연락처</label></dt>
+			        <dd class="tel-input">
+			            <input type="tel" name="contact_part1" id="contact1" class="form-input contact-input small-input" maxlength="4" required> - 
+			            <input type="tel" name="contact_part2" id="contact2" class="form-input contact-input medium-input" maxlength="4" required> - 
+			            <input type="tel" name="contact_part3" id="contact3" class="form-input contact-input medium-input" maxlength="4" required>
+			        </dd>
+			    </dl>
 			</div>
-			<h2 class="doc-tit"><span class="highlight">공간정보</span></h2>
-			<div class="group">
-				<div class="box wide">
-					<dl>
-						<dt><label for="address">공사예정지 주소 (동, 호수 상세하게 기재 부탁드립니다.)</label></dt>
-						<dd><input type="text" name="etc_3" id="address" placeholder="동, 호수 상세 기재" class="input" style="width:100%;" ></dd>
-					</dl>
-				</div>
-				<div class="box wide">
-					<dl>
-						<dt>공간구성</dt><!-- etc_4 -->
-						<dd>
-							<span class="inner">평수 <input type="text" name="area" id="area" value="" class="input" style="width:100px; margin:0 10px;" onkeypress="inputNum" > 평</span>
-							<span class="bar"></span>
-							<span class="inner">방 <input type="text" name="room" id="room" value="" class="input" style="width:100px; margin:0 10px;" onkeypress="inputNum" > 칸</span></span>
-							<span class="bar"></span>
-							<span class="inner">욕실 <input type="text" name="bath" id="bath" value="" class="input" style="width:100px; margin:0 10px;" onkeypress="inputNum" > 칸</span></span>
-						</dd>
-					</dl>
-				</div>
-				<div class="box">
-					<dl>
-						<dt>공사 시작일</dt>
-						<dd><input type="text" name="event_sdate" value="" class="input datepicker2" placeholder="YYYY-MM-DD" style="width:100%;" ></dd>
-					</dl>
-				</div>
-				<div class="box">
-					<dl>
-						<dt>입주 예정일</dt>
-						<dd><input type="text" name="event_edate" value="" class="input datepicker2" placeholder="YYYY-MM-DD" style="width:100%;" ></dd>
-					</dl>
-				</div>
-				<div class="box">
-					<dl>
-						<dt>공간유형</dt>
-						<dd>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_5" id="cate_1" value="아파트" checked><label for="cate_1">아파트</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_5" id="cate_2" value="단독주택" ><label for="cate_2">단독주택</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_5" id="cate_3" value="빌라" ><label for="cate_3">빌라</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_5" id="cate_4" value="주상복합" ><label for="cate_4">주상복합</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_5" id="cate_5" value="오피스텔" ><label for="cate_5">오피스텔</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="etc_5" id="cate_6" value="기타" ><label for="cate_6">기타</label></span>
-							</span>
-						</dd>
-					</dl>
-				</div>
-				<div class="box">
-					<dl>
-						<dt>공사예산</dt>
-						<dd>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="website" id="budget_1" value="6,000이상" checked><label for="budget_1">6,000이상</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="website" id="budget_2" value="7,000~8,000" ><label for="budget_2">7,000~8,000</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="website" id="budget_3" value="9,000~1억" ><label for="budget_3">9,000~1억</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="website" id="budget_4" value="1억이상" ><label for="budget_4">1억이상</label></span>
-							</span>
-							<span class="item">
-								<span class="radiobox"><input type="radio" name="website" id="budget_5" value="2억이상" ><label for="budget_5">2억이상</label></span>
-							</span>
-						</dd>
-					</dl>
-				</div>
-				<div class="box wide">
-					<dl>
-						<dt><label for="file2">평면도 첨부 (평면도 미첨부 시 원활한 상담이 불가하오니 첨부 부탁드립니다.)	</label></dt>
-						<dd class="file-wrap"><input type="file" name="upfiles2[]" id="file2" class="input" style="width:100%;" ></dd><!-- required -->
-											</dl>
-				</div>
-				
-				<div class="box wide">
-					<dl>
-						<dt><label for="memo">문의사항</label></dt>
-						<dd><textarea name="contents1" id="memo" placeholder="내용을 입력해 주세요." class="input" style="width:100%;height:270px;" ></textarea></dd>
-						<dd class="file-wrap"><input type="file" name="upfiles[]" id="file" class="input" style="width:100%;" ></dd><!-- required -->
-											</dl>
-				</div>
-				<div class="box wide">
-					<dl>
-						<dt><label for="rel_url">관심 프로젝트 URL (필수사항은 아니며, 있으신 경우 첨부해 주시면 참고하도록 하겠습니다.)</label></dt>
-						<dd><input type="text" name="homepage" id="rel_url" value="" placeholder="관심프로젝트 링크를 입력해 주세요. " class="input" style="width:100%;"></dd>
-					</dl>
-				</div>
-			</div>
+
+		        <div class="form-box">
+		            <dl>
+		                <dt><label for="customer_email">이메일</label></dt>
+		                <dd><input type="email" name="customer_email" id="customer_email" placeholder="이메일을 입력해 주세요." class="form-input" required></dd>
+		            </dl>
+		        </div>                            
+		        <div class="form-box">
+		            <dl>
+		                <dt>유입 경로</dt>
+		                <dd>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_youtube" value="유튜브" checked><label for="source_youtube">유튜브</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_instagram" value="인스타그램"><label for="source_instagram">인스타그램</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_blog" value="블로그"><label for="source_blog">블로그</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_referral" value="지인소개"><label for="source_referral">지인소개</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_search" value="인터넷검색"><label for="source_search">인터넷검색</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_others" value="기타"><label for="source_others">기타</label></span>
+		                    </span>
+		                </dd>
+		            </dl>
+		        </div>
+		        <div class="form-box">
+		            <dl>
+		                <dt><label for="customer_password">비밀번호</label></dt>
+		                <dd><input type="password" name="customer_password" id="customer_password" placeholder="비밀번호를 입력해 주세요." class="form-input" required></dd>
+		            </dl>
+		        </div>
+		    </div>
+		    
+		    <h2 class="form-title"><span class="highlight">견적 내용</span></h2>
+		    <div class="form-group">
+		        <div class="form-box wide-box">
+		            <dl>
+		                <dt><label for="construction_address">공사 예정지 주소</label></dt>
+		                <dd><input type="text" name="construction_address" id="construction_address" placeholder="동, 호수 상세 기재" class="form-input" required></dd>
+		            </dl>
+		        </div>
+		        <div class="form-box wide-box">
+		            <dl>
+		                <dt>공간 구성</dt>
+		                <dd>
+		                    <span class="inner">평수 <input type="text" name="area_size" id="area_size" class="form-input small-input" onkeypress="inputNum"> 평</span>
+		                    <span class="bar"></span>
+		                    <span class="inner">방 <input type="text" name="room_count" id="room_count" class="form-input small-input" onkeypress="inputNum"> 칸</span>
+		                    <span class="bar"></span>
+		                    <span class="inner">욕실 <input type="text" name="bath_count" id="bath_count" class="form-input small-input" onkeypress="inputNum"> 칸</span>
+		                </dd>
+		            </dl>
+		        </div>
+		        <div class="form-box">
+		            <dl>
+		                <dt>공사 시작일</dt>
+		                <dd><input type="text" name="construction_start_date" class="form-input datepicker" placeholder="YYYY-MM-DD" required></dd>
+		            </dl>
+		        </div>
+		        <div class="form-box">
+		            <dl>
+		                <dt>입주 예정일</dt>
+		                <dd><input type="text" name="move_in_date" class="form-input datepicker" placeholder="YYYY-MM-DD" required></dd>
+		            </dl>
+		        </div>
+		        <div class="form-box">
+		            <dl>
+		                <dt>공간 유형</dt>
+		                <dd>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="space_type" id="type_apartment" value="아파트" checked><label for="type_apartment">아파트</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="space_type" id="type_house" value="단독주택"><label for="type_house">단독주택</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="space_type" id="type_villa" value="빌라"><label for="type_villa">빌라</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="space_type" id="type_mixed" value="주상복합"><label for="type_mixed">주상복합</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="space_type" id="type_officetel" value="오피스텔"><label for="type_officetel">오피스텔</label></span>
+		                    </span>
+		                    <span class="item">
+		                        <span class="radiobox"><input type="radio" name="space_type" id="type_others" value="기타"><label for="type_others">기타</label></span>
+		                    </span>
+		                </dd>
+		            </dl>
+		        </div>
+		        <div class="form-box">
+		            <dl>
+		                <dt>공사 예산</dt>
+		                <dd>
+		                    <input type="text" name="move_in_date" class="form-input money" required> 만원
+		                </dd>
+		            </dl>
+		        </div>
+		        <div class="form-box wide-box">
+		            <dl>
+		                <dt><label for="floor_plan">층별 배치도</label></dt>
+		                <dd><input type="file" name="floor_plan" id="floor_plan" class="form-input" accept=".jpg, .jpeg, .png, .pdf"></dd>
+		            </dl>
+		        </div>
+		        
+		        <div class="form-box wide-box">
+		            <dl>
+		                <dt><label for="floor_plan">참고 사진(URL)</label></dt>
+		                <dd><input type="file" name="floor_plan" id="floor_plan" class="form-input" accept=".jpg, .jpeg, .png, .pdf"></dd>
+		                <dd><input type="text" name="floor_plan" id="floor_plan" class="form-input" placeholder="참고할 수 있는 사이트의 URL을 입력해주세요"></dd>
+		            </dl>
+		        </div>
+		        <div class="form-box wide-box">
+		            <dl>
+		                <dt><label for="floor_plan">기타 문의사항</label></dt>
+		                <dd><textarea class="inquiry"></textarea></dd>
+		            </dl>
+		        </div>
+		    </div>
 		</div>
+
 		<div class="buttons">
 			<div class="cen">
-				<input type="submit" value="문의하기" class="btn-pack xlarge type2 focus round" title="문의하기">
+				<input type="submit" value="견적신청" class="btn-pack xlarge type2 focus round" title="견적 신청">
 			</div>
 		</div>
 	</form>
 </div>
-			<iframe src="/module/board/contents.php?boardid=inquiry" width="100%" height="600" frameborder="0"></iframe>
 			
 			<!-- 고객요청사항 : 연락처 작성 시 다들 다르게 작성하실 것 같아서 010 띄고 0000 띄고 0000 이렇게 3개로 나누어 작성할 수 있도록 설정 부탁드립니다.
 					하단 관심프로젝트 URL 제외 모든 항목 필수항목 -->
